# HtW

./: .gitignore  .gitmodules  Juste_des_tests_de_caca.ipynb  README.md  pyproject.toml  requirements-htw.in  requirements-torch.in  requirements.in
Alexandre/multiroom_jepa/: .gitignore  pyproject.toml  train.py
Alexandre/multiroom_jepa/cfgs/: multiroom_train.yaml  tworooms_train.yaml
Alexandre/multiroom_jepa/eb_jepa/: .gitignore  Makefile  README.md  pyproject.toml
Alexandre/multiroom_jepa/eb_jepa/examples/: launch_sbatch.py
Alexandre/multiroom_jepa/eb_jepa/tests/: planning_test.py  test_jepa_output_formats.py
Alexandre/multiroom_jepa/environments/multiroom/: __init__.py  config.py  data_config.yaml  dataset.py  physics.py  renderer.py
Alexandre/multiroom_jepa/environments/two_rooms/: __init__.py  dot_dataset.py
Alexandre/multiroom_jepa/scripts/: generate_sample.py  test_env.py
Enzo/: README.md  __init__.py  (+1 more)
eb_jepa_cleaned/: README.md  chatbot_context.md  migration_decision.md  migration_todo.md  pyproject.toml
eb_jepa_cleaned/Configs/: README.md  toy_run.yaml  toy_run_2.yaml  toy_run_offline.yaml  toy_run_online.yaml
eb_jepa_cleaned/Configs/toy_run/: config.yaml  loggers.yaml  module.yaml  setup.yaml  trainer.yaml
eb_jepa_cleaned/Configs/toy_run_2/: checkpoints.yaml  config.yaml  datamodule.yaml  early_stoppings.yaml  loggers.yaml  run.yaml  setup.yaml  trainer.yaml
eb_jepa_cleaned/Configs/toy_run_offline/: config.yaml  early_stoppings.yaml  loggers.yaml  module.yaml  setup.yaml
eb_jepa_cleaned/Configs/toy_run_online/: checkpoints.yaml  config.yaml  loggers.yaml  module.yaml  setup.yaml  trainer.yaml
eb_jepa_cleaned/eb_jepa_cleaned/: README.md
eb_jepa_cleaned/eb_jepa_cleaned/AIML/: README.md
eb_jepa_cleaned/eb_jepa_cleaned/AIML/Data/: README.md
eb_jepa_cleaned/eb_jepa_cleaned/AIML/Execution/: README.md
eb_jepa_cleaned/eb_jepa_cleaned/AIML/Metrics/: README.md  factory.py
eb_jepa_cleaned/eb_jepa_cleaned/AIML/Training/: README.md  factory.py
eb_jepa_cleaned/eb_jepa_cleaned/Workflow/: README.md
eb_jepa_cleaned/src/: README.md
eb_jepa_cleaned/src/AcVideoJEPA/: README.md  __init__.py
eb_jepa_cleaned/tests/: README.md
eb_jepa_cleaned/tests/smoke/: test_ac_video_jepa_smoke.py
(+607 files in other folders)
