[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "htw"
version = "0.1.0"
description = "HTW project package"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = [
    "Alexandre*",
    "Daniel*",
    "Octave*",
    "Enzo*",
]
exclude = [
    "tests*",
]
namespaces = true

